Changes to pom file to allow parallel execution of all tests. Working on ideas for making access of classes within child first class loader easier to use.