@@ -201,14 +201,25 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${maven-surefire-plugin.version}</version>
+<!--
                         <configuration>
-                            <!--
+                            &lt;!&ndash;
                                 Due to the classes being loaded into different class loaders and coupled with
                                 the fact that these tests are all about testing that behaviour, the forking and
                                 below argLine settings are used to avoid the perm-space from becoming full.
-                            -->
+                            &ndash;&gt;
                             <forkMode>always</forkMode>
                             <argLine>-Xmx768m -Xms768m -XX:MaxPermSize=384m</argLine>
+                        </configuration>
+-->
+                        <configuration>
+                            <forkCount>4</forkCount>
+                            <reuseForks>false</reuseForks>
+                            <argLine>-Xmx768m -Xms768m -XX:MaxPermSize=384m</argLine>
+                            <systemPropertyVariables>
+                                <littlegrid.builder.WkaPort>${starting.thousand.port.number}${surefire.forkNumber}00</littlegrid.builder.WkaPort>
+                                <littlegrid.builder.ExtendPort>${starting.thousand.port.number}${surefire.forkNumber}50</littlegrid.builder.ExtendPort>
+                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
 
@@ -258,12 +269,14 @@
         <coherence.version>12.1.3-0-0</coherence.version>
         <junit.version>4.8.2</junit.version>
 
+        <starting.thousand.port.number>40</starting.thousand.port.number>
+
         <!-- Plugin versions -->
         <maven-clean-plugin.version>2.4.1</maven-clean-plugin.version>
         <maven-install-plugin.version>2.3.1</maven-install-plugin.version>
         <maven-release-plugin.version>2.1</maven-release-plugin.version>
         <maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>2.10</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
         <maven-javadoc-plugin.version>2.7</maven-javadoc-plugin.version>
         <maven-checkstyle-plugin.version>2.7</maven-checkstyle-plugin.version>
         <maven-source-plugin.version>2.1.2</maven-source-plugin.version>
